error4.log
    Checking bevy-tetris v0.1.0 (D:\works\bevy-tetris)
warning: unused import: `Grid`
 --> src\systems\setup.rs:2:24
  |
2 | use crate::resources::{Grid, GRID_WIDTH, GRID_HEIGHT};
  |                        ^^^^
  |
  = note: `#[warn(unused_imports)]` on by default

warning: unused import: `bevy::prelude::*`
 --> src\systems\collision.rs:1:5
  |
1 | use bevy::prelude::*;
  |     ^^^^^^^^^^^^^^^^

warning: unused import: `Block`
 --> src\systems\locking.rs:2:47
  |
2 | use crate::components::{Active, GridPosition, Block};
  |                                               ^^^^^

warning: unused import: `bevy::prelude::*`
 --> src\systems\line_clearing.rs:1:5
  |
1 | use bevy::prelude::*;
  |     ^^^^^^^^^^^^^^^^

error[E0599]: no method named `send` found for struct `bevy::prelude::MessageWriter` in the current scope
   --> src\systems\movement.rs:117:21
    |
117 |         lock_events.send(crate::systems::locking::PieceLocks);
    |                     ^^^^ method not found in `bevy::prelude::MessageWriter<'_, PieceLocks>`

warning: unused variable: `new_pivot`
  --> src\systems\movement.rs:26:13
   |
26 |         let new_pivot = piece.position + delta;
   |             ^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_new_pivot`
   |
   = note: `#[warn(unused_variables)]` on by default

warning: variable does not need to be mutable
 --> src\systems\movement.rs:8:5
  |
8 |     mut active_piece: Option<ResMut<ActivePiece>>,
  |     ----^^^^^^^^^^^^
  |     |
  |     help: remove this `mut`
  |
  = note: `#[warn(unused_mut)]` on by default

warning: unused variable: `piece`
  --> src\systems\locking.rs:18:21
   |
18 |         if let Some(piece) = active_piece.as_mut() {
   |                     ^^^^^ help: if this is intentional, prefix it with an underscore: `_piece`

warning: unused variable: `score`
  --> src\systems\locking.rs:14:9
   |
14 |     mut score: ResMut<GameScore>,
   |         ^^^^^ help: if this is intentional, prefix it with an underscore: `_score`

warning: variable does not need to be mutable
  --> src\systems\locking.rs:14:5
   |
14 |     mut score: ResMut<GameScore>,
   |     ----^^^^^
   |     |
   |     help: remove this `mut`

For more information about this error, try `rustc --explain E0599`.
warning: `bevy-tetris` (bin "bevy-tetris") generated 9 warnings
error: could not compile `bevy-tetris` (bin "bevy-tetris") due to 1 previous error; 9 warnings emitted
